--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
         <!-- Level 1 'HAPPY' Header -->
-        
+        <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
 
