--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="[columbia-logo.png]">
+        <img src="columbia-logo.png">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
